--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,18 +1,18 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-  height: 90vh;
+  padding: 0 2rem;
+  /* text-align: center; */
+  height: 100vh;
 }
 
 .App {
   display: flex;
   align-items: flex-start;
-  height: 100%;
+  height: 92%;
   width: 90vw;
 }
 
 .editor {
-  width: 50vw;
+  width: 50%;
+  height: 100%;
 }
